src/main/kotlin/com/example/server/error/exception/ImageRemovalException.kt
package com.example.server.error.exception

class ImageRemovalException : RuntimeException()